Changed header styling and replaced sticky by fixed for compatability with overflow.

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,12 +1,13 @@
 .header {
-    position: sticky;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 10vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     z-index: 100;
-    border: black dashed 1px;
+    background: black;
+    color: white;
 }
 .logoContainer {
     grid-column: 1 / 2;
@@ -16,19 +17,26 @@
     padding-left: 1em;
 }
 .nav {
-    position: absolute;
+    position: fixed;
     top: 0;
-    right: -40vw;
+    right: 0;
     width: 40vw;
     height: 100vh;
+    transform: translate(100%);
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    transition: right ease-in-out 0.5s;
+    transition: transform ease-in-out 0.5s;
+    background: black;
+    color: white;
 }
 .navToggled {
-    right: 0;
+    transform: translate(0%);
+}
+.nav a {
+    color: white;
+    text-decoration: none;
 }
 
 .burger {
@@ -46,7 +54,7 @@
 .line {
     width: 30px;
     height: 3px;
-    background: black;
+    background: white;
     margin: 2.5px 0 ;
 }
 
@@ -59,6 +67,7 @@
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
+        transform: none;
     }
     .burger {
         display: none;
